--- a/index.html
+++ b/index.html
@@ -1,251 +1,103 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Feliz San Valentín 💘</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Feliz San Valentín 💘</title>
 
-  <style>
-    :root{
-      --bg1:#ff6aa2;
-      --bg2:#ff9cc8;
-      --card:#ffffffde;
-      --text:#222;
-      --accent:#ff2f7a;
-      --shadow: 0 20px 60px rgba(0,0,0,.18);
-    }
+<style>
+body{
+  margin:0;
+  font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial;
+  background: linear-gradient(135deg,#ff6aa2,#ff9cc8);
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  min-height:100vh;
+  padding:20px;
+}
 
-    *{ box-sizing:border-box; }
+.card{
+  width:100%;
+  max-width:420px;
+  background:white;
+  border-radius:25px;
+  padding:20px;
+  box-shadow:0 15px 40px rgba(0,0,0,.2);
+  text-align:center;
+}
 
-    body{
-      margin:0;
-      min-height:100vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      color:var(--text);
-      background:
-        radial-gradient(1200px 700px at 30% 20%, #ffd3e6 0%, transparent 60%),
-        linear-gradient(135deg, var(--bg1), var(--bg2));
-      overflow:hidden;
-    }
+h1{
+  font-size:24px;
+  margin-bottom:15px;
+  color:#ff2f7a;
+}
 
-    #ledLayer{
-      position:fixed;
-      inset:0;
-      pointer-events:none;
-      z-index:0;
-    }
+img{
+  width:100%;
+  border-radius:18px;
+  margin-bottom:15px;
+}
 
-    .card{
-      position:relative;
-      z-index:1;
-      width:min(980px, 92vw);
-      background:var(--card);
-      border-radius:24px;
-      box-shadow:var(--shadow);
-      padding:22px;
-      backdrop-filter: blur(6px);
-    }
+.letter{
+  font-size:15px;
+  line-height:1.6;
+  margin-bottom:15px;
+}
 
-    .grid{
-      display:grid;
-      grid-template-columns: 1.15fr .85fr;
-      gap:18px;
-      align-items:center;
-    }
+button{
+  width:100%;
+  padding:14px;
+  border:none;
+  border-radius:15px;
+  background:#ff2f7a;
+  color:white;
+  font-weight:bold;
+  font-size:16px;
+  cursor:pointer;
+}
 
-    @media (max-width: 860px){
-      .grid{ grid-template-columns: 1fr; }
-    }
-
-    .title{
-      margin:0 0 8px 0;
-      font-size: clamp(28px, 3.6vw, 44px);
-      letter-spacing:.2px;
-    }
-
-    .name{
-      color:var(--accent);
-      font-weight:900;
-    }
-
-    .subtitle{
-      margin:0 0 14px 0;
-      opacity:.85;
-      font-size: 15px;
-    }
-
-    .letter{
-      padding:16px;
-      border-radius:18px;
-      background:#fff;
-      border:1px solid rgba(0,0,0,.06);
-    }
-
-    .letter p{
-      margin:10px 0;
-      line-height:1.6;
-      font-size:15.5px;
-    }
-
-    .media{
-      display:flex;
-      flex-direction:column;
-      gap:12px;
-      align-items:center;
-    }
-
-    .photo{
-      width:min(360px, 88vw);
-      aspect-ratio: 3 / 4;
-      object-fit:cover;
-      border-radius:20px;
-      border:1px solid rgba(0,0,0,.08);
-      box-shadow: 0 18px 40px rgba(0,0,0,.18);
-      background:#f5f5f5;
-    }
-
-    .controls{
-      width:min(360px, 88vw);
-      display:flex;
-      flex-direction:column;
-      gap:10px;
-    }
-
-    .btn{
-      appearance:none;
-      border:0;
-      border-radius:16px;
-      padding:12px 14px;
-      font-weight:900;
-      background: linear-gradient(135deg, #ff2f7a, #ff6aa2);
-      color:white;
-      cursor:pointer;
-      box-shadow: 0 12px 22px rgba(255,47,122,.25);
-      transition: transform .08s ease, filter .2s ease;
-    }
-    .btn:hover{ filter: brightness(1.03); }
-    .btn:active{ transform: translateY(1px) scale(.99); }
-
-    .phrase{
-      min-height:56px;
-      padding:12px 14px;
-      border-radius:16px;
-      background:#fff;
-      border:1px solid rgba(0,0,0,.08);
-      font-size:15px;
-      line-height:1.45;
-    }
-
-    .pulse{
-      display:inline-block;
-      animation: pulse 1.5s infinite;
-      transform-origin:center;
-    }
-    @keyframes pulse{
-      0%{ transform:scale(1); }
-      50%{ transform:scale(1.04); }
-      100%{ transform:scale(1); }
-    }
-  </style>
+.phrase{
+  margin-top:12px;
+  min-height:40px;
+  font-size:14px;
+}
+</style>
 </head>
 
 <body>
-  <div id="ledLayer"></div>
 
-  <main class="card">
-    <div class="grid">
-      <section>
-        <h1 class="title"><span class="pulse">💘 Feliz San Valentín</span>, <span class="name">Pepito Suarez</span> 💘</h1>
-        <p class="subtitle">Una cartita sencilla, pero con cariño.</p>
+<div class="card">
+  <h1>💘 Feliz San Valentín, Pepito Suarez 💘</h1>
 
-        <div class="letter">
-          <p>Hoy quería recordarte algo simple: me encanta compartir contigo.</p>
-          <p>Gracias por cada momento, por cada risa y por hacer que lo cotidiano se sienta especial.</p>
-          <p><strong>Con cariño:</strong> ❤️</p>
-        </div>
-      </section>
+  <img src="image/pareja.jpg" alt="Foto">
 
-      <aside class="media">
-        <img class="photo" src="image/pareja.jpg" alt="Foto">
+  <div class="letter">
+    Hoy quiero decirte algo sencillo pero sincero.
+    Gracias por cada momento y por hacer mi vida más bonita. ❤️
+  </div>
 
-        <div class="controls">
-          <button class="btn" id="btnPhrase">Dame una frase bonita ✨</button>
-          <div class="phrase" id="phraseBox">Haz clic en el botón y te suelto una frase 💌</div>
-        </div>
-      </aside>
-    </div>
-  </main>
+  <button onclick="mostrarFrase()">Dame una frase bonita ✨</button>
 
-  <script>
-    const phrases = [
-      "Eres mi parte favorita del día.",
-      "Contigo todo se siente más bonito.",
-      "Gracias por existir en mi vida.",
-      "Te elegiría una y mil veces.",
-      "Mi lugar favorito es a tu lado.",
-      "Eres mi mejor casualidad.",
-      "Me haces feliz sin esfuerzo."
-    ];
+  <div class="phrase" id="frase"></div>
+</div>
 
-    const phraseBox = document.getElementById("phraseBox");
-    document.getElementById("btnPhrase").addEventListener("click", () => {
-      phraseBox.textContent = phrases[Math.floor(Math.random() * phrases.length)];
-    });
+<script>
+const frases = [
+"Eres mi parte favorita del día.",
+"Contigo todo se siente más bonito.",
+"Te elegiría una y mil veces.",
+"Mi lugar favorito es a tu lado.",
+"Me haces feliz sin esfuerzo."
+];
 
-    const layer = document.getElementById("ledLayer");
+function mostrarFrase(){
+  document.getElementById("frase").textContent =
+    frases[Math.floor(Math.random()*frases.length)];
+}
+</script>
 
-    function makeLedHeartSVG(sizePx){
-      const vb = 120;
-      const step = 7;
-      const r = 1.6;
-      const color = (Math.random() < 0.55) ? "#ff2f7a" : "#ffffff";
-
-      let circles = "";
-      for(let y = -1.2; y <= 1.2; y += 0.12){
-        for(let x = -1.3; x <= 1.3; x += 0.12){
-          const a = x*x + y*y - 1;
-          const inside = (a*a*a - x*x*y*y*y) <= 0;
-          if(inside){
-            const cx = (x + 1.3) / 2.6 * vb;
-            const cy = (1.2 - y) / 2.4 * vb;
-            const gx = Math.round(cx / step) * step;
-            const gy = Math.round(cy / step) * step;
-            circles += `<circle cx="${gx}" cy="${gy}" r="${r}" fill="${color}" opacity="0.95" />`;
-          }
-        }
-      }
-
-      const wrap = document.createElement("div");
-      wrap.style.position = "absolute";
-      wrap.style.left = (Math.random() * 100) + "vw";
-      wrap.style.bottom = "-140px";
-      wrap.style.width = sizePx + "px";
-      wrap.style.height = sizePx + "px";
-      wrap.style.filter = "drop-shadow(0 0 10px rgba(255,47,122,.25))";
-      wrap.style.opacity = "0.95";
-      wrap.innerHTML = `<svg viewBox="0 0 ${vb} ${vb}" width="100%" height="100%">${circles}</svg>`;
-
-      const dur = 5 + Math.random() * 4;
-      const drift = (Math.random() * 80) - 40;
-      wrap.style.transition = `transform ${dur}s linear, opacity ${dur}s linear`;
-
-      layer.appendChild(wrap);
-
-      requestAnimationFrame(() => {
-        wrap.style.transform = `translate(${drift}px, -120vh)`;
-        wrap.style.opacity = "0";
-      });
-
-      setTimeout(() => wrap.remove(), (dur * 1000) + 200);
-    }
-
-    setInterval(() => {
-      const size = 70 + Math.random() * 70;
-      makeLedHeartSVG(size);
-    }, 650);
-  </script>
 </body>
 </html>
+
+
