--- a/index.html
+++ b/index.html
@@ -21,12 +21,9 @@ body{
 
 /* 🔥 MÁS GRANDE */
 .card{
-  width:100%;
-  max-width:560px; /* antes 430px */
-  background:#fff;
-  border-radius:30px;
-  box-shadow:var(--shadow);
-  overflow:hidden;
+  width:300px;
+  height:300px;
+  background:white;
 }
 
 .header{
@@ -91,6 +88,7 @@ h1{
   line-height:1.5;
 }
 </style>
+
 
 
 
