--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   --bg1:#ff6aa2;
   --bg2:#ff9cc8;
   --accent:#ff2f7a;
-  --shadow:0 20px 60px rgba(0,0,0,.25);
 }
 
 *{ box-sizing:border-box; }
@@ -21,112 +20,107 @@ body{
   display:flex;
   justify-content:center;
   align-items:center;
-  padding:20px;
   font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-  background: linear-gradient(135deg, var(--bg1), var(--bg2));
+  background: linear-gradient(135deg,var(--bg1),var(--bg2));
+  padding:30px;
 }
 
-.card{
+/* Contenedor principal sin tarjeta */
+.container{
   width:100%;
-  max-width:700px;
-  background:#fff;
-  border-radius:30px;
-  box-shadow:var(--shadow);
-  overflow:hidden;
+  max-width:900px;
 }
 
-.header{
-  padding:22px;
-  text-align:center;
+/* Layout lado a lado */
+.row{
+  display:flex;
+  gap:40px;
+  align-items:center;
+  justify-content:center;
+}
+
+/* Imagen con marco */
+.photo{
+  width:350px;
+  border-radius:20px;
+  border:8px solid white;
+  box-shadow:0 20px 50px rgba(0,0,0,.3);
+  object-fit:cover;
+}
+
+/* Texto */
+.text{
+  max-width:400px;
+  color:white;
 }
 
 h1{
-  margin:0;
-  font-size:26px;
-  color:var(--accent);
+  margin-top:0;
+  color:white;
 }
 
-.photo{
-  width:100%;
-  aspect-ratio:4/5;
-  object-fit:cover;
-  display:block;
-}
-
-.content{
-  padding:22px;
-}
-
-.letter{
-  margin-bottom:18px;
-  font-size:16px;
+.message{
+  font-size:18px;
   line-height:1.7;
 }
 
+/* Botón */
 .btn{
-  width:100%;
-  border:0;
-  border-radius:18px;
-  padding:16px;
-  background: linear-gradient(135deg, #ff2f7a, #ff6aa2);
-  color:#fff;
-  font-weight:900;
-  font-size:17px;
+  margin-top:20px;
+  padding:14px 20px;
+  border:none;
+  border-radius:15px;
+  background:white;
+  color:#ff2f7a;
+  font-weight:bold;
   cursor:pointer;
-}
-
-.deck{
-  position:relative;
-  margin-top:16px;
-  height:110px;
-}
-
-.slide{
-  position:absolute;
-  inset:0;
-  border-radius:20px;
-  padding:18px;
-  background:#fff6fa;
-  border:1px solid rgba(0,0,0,.08);
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  text-align:center;
   font-size:16px;
-  line-height:1.5;
-  transition: opacity .4s ease, transform .4s ease;
-  opacity:0;
-  transform:translateX(20px);
 }
 
-.slide.show{
-  opacity:1;
-  transform:translateX(0);
+.phrase{
+  margin-top:15px;
+  font-size:16px;
+  min-height:30px;
+}
+
+/* Responsive móvil */
+@media(max-width:768px){
+  .row{
+    flex-direction:column;
+    text-align:center;
+  }
+  .photo{
+    width:100%;
+    max-width:350px;
+  }
 }
 </style>
 </head>
 
 <body>
 
-<div class="card">
-  <div class="header">
-    <h1>💘 Feliz San Valentín, Pepito Suarez 💘</h1>
-  </div>
+<div class="container">
 
+<h1>💘 Feliz San Valentín, Pepito Suarez 💘</h1>
+
+<div class="row">
+  
+  <!-- Imagen izquierda -->
   <img class="photo" src="image/pareja.jpg" alt="Foto">
 
-  <div class="content">
-    <div class="letter">
+  <!-- Texto derecha -->
+  <div class="text">
+    <div class="message">
       Hoy quiero decirte algo sencillo pero sincero.
       Gracias por cada momento y por hacer mi vida más bonita. ❤️
     </div>
 
-    <button class="btn" id="btn">Dame una frase bonita ✨</button>
-
-    <div class="deck">
-      <div class="slide show" id="slide">Toca el botón para ver frases 💌</div>
-    </div>
+    <button class="btn" onclick="mostrarFrase()">Dame una frase bonita ✨</button>
+    <div class="phrase" id="frase"></div>
   </div>
+
+</div>
+
 </div>
 
 <script>
@@ -138,18 +132,14 @@ const frases = [
 "Me haces feliz sin esfuerzo."
 ];
 
-const btn = document.getElementById("btn");
-const slide = document.getElementById("slide");
-
-btn.addEventListener("click", () => {
-  slide.classList.remove("show");
-  setTimeout(() => {
-    slide.textContent = frases[Math.floor(Math.random()*frases.length)];
-    slide.classList.add("show");
-  }, 180);
-});
+function mostrarFrase(){
+  document.getElementById("frase").textContent =
+    frases[Math.floor(Math.random()*frases.length)];
+}
 </script>
 
 </body>
 </html>
+
+
 
