--- a/index.html
+++ b/index.html
@@ -1,210 +1,42 @@
 <!doctype html>
 <html lang="es">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Feliz San Valentín 💘</title>
-
-<style>
-:root{
-  --bg1:#ff6aa2;
-  --bg2:#ff9cc8;
-  --accent:#ff2f7a;
-}
-
-*{ box-sizing:border-box; }
-
-body{
-  margin:0;
-  min-height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-  background: linear-gradient(135deg,var(--bg1),var(--bg2));
-  padding:30px;
-}
-
-.container{
-  width:100%;
-  max-width:900px;
-}
-
-h1{
-  margin:0 0 18px 0;
-  color:white;
-  text-align:center;
-  font-size: clamp(22px, 3vw, 34px);
-  letter-spacing:.2px;
-}
-
-/* Layout lado a lado */
-.row{
-  display:flex;
-  gap:40px;
-  align-items:center;
-  justify-content:center;
-}
-
-.photo{
-  width:350px;
-  border-radius:20px;
-  border:8px solid white;
-  box-shadow:0 20px 50px rgba(0,0,0,.3);
-  object-fit:cover;
-  aspect-ratio: 3 / 4;
-}
-
-/* Texto */
-.text{
-  max-width:420px;
-  color:white;
-}
-
-.message{
-  font-size:18px;
-  line-height:1.7;
-}
-
-/* Botón-tarjeta unificado */
-.phraseBtn{
-  margin-top:18px;
-  width:100%;
-  border:none;
-  border-radius:18px;
-  background: rgba(255,255,255,.92);
-  color:#222;
-  box-shadow:0 14px 30px rgba(0,0,0,.18);
-  cursor:pointer;
-  padding:16px;
-  text-align:center;
-  touch-action: manipulation;
-  transition: transform .08s ease, filter .2s ease, opacity .35s ease;
-}
-
-.phraseBtn:hover{ filter: brightness(1.02); }
-.phraseBtn:active{ transform: translateY(1px) scale(.99); }
-.phraseBtn:disabled{
-  opacity:.75;
-  cursor:not-allowed;
-}
-
-/* animación tipo “tarjeta” */
-.phraseBtn.out{
-  opacity:0;
-  transform: translateX(18px);
-}
-.phraseBtn.in{
-  opacity:1;
-  transform: translateX(0);
-}
-
-/* texto del botón */
-.phraseMain{
-  display:block;
-  font-weight:900;
-  font-size:16px;
-  color:var(--accent); /* mantiene el “estilo” del Dame una frase bonita */
-  line-height:1.35;
-}
-
-.phraseHint{
-  display:block;
-  margin-top:8px;
-  font-size:13px;
-  font-weight:700;
-  color: rgba(0,0,0,.55);
-  line-height:1.3;
-}
-
-/* Responsive móvil */
-@media(max-width:768px){
-  body{ padding:18px; }
-  .row{ flex-direction:column; text-align:center; gap:18px; }
-  .photo{ width:100%; max-width:360px; }
-  .text{ max-width:520px; }
-  .message{ font-size:16px; }
-}
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Feliz San Valentín 💘</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
-<div class="container">
-  <h1>💘 Feliz San Valentín, Pepito Suarez 💘</h1>
+  <!-- Fondo de corazones LED -->
+  <canvas id="heartsBg"></canvas>
 
-  <div class="row">
-    <img class="photo" src="image/pareja.jpg" alt="Foto">
+  <div class="container">
+    <h1>💘 Feliz San Valentín, Pepito Suarez 💘</h1>
 
-    <div class="text">
-      <div class="message">
-        Hoy quiero decirte algo sencillo pero sincero.
-        Gracias por cada momento y por hacer mi vida más bonita. ❤️
+    <div class="row">
+      <img class="photo" src="image/pareja.jpg" alt="Foto">
+
+      <div class="text">
+        <div class="message">
+          Hoy quiero decirte algo sencillo pero sincero.
+          Gracias por cada momento y por hacer mi vida más bonita. ❤️
+        </div>
+
+        <!-- Botón-tarjeta -->
+        <button class="phraseBtn in" id="btn">
+          <span class="phraseMain" id="mainText">Dame una frase bonita ✨</span>
+          <span class="phraseHint">«Toca el botón y salen frases 💌»</span>
+        </button>
       </div>
-
-      <!-- BOTÓN-TARJETA -->
-      <button class="phraseBtn in" id="btn">
-        <span class="phraseMain" id="mainText">Dame una frase bonita ✨</span>
-        <span class="phraseHint">«Toca el botón y salen frases 💌»</span>
-      </button>
     </div>
   </div>
-</div>
 
-<script>
-const frases = [
-  "Eres mi parte favorita del día.",
-  "Contigo todo se siente más bonito.",
-  "Te elegiría una y mil veces.",
-  "Mi lugar favorito es a tu lado.",
-  "Me haces feliz sin esfuerzo.",
-  "Gracias por existir en mi vida.",
-  "Tu sonrisa me calma."
-];
-
-const btn = document.getElementById("btn");
-const mainText = document.getElementById("mainText");
-
-let animando = false;
-let lastIndex = -1;
-
-function nextPhrase(){
-  let i = Math.floor(Math.random() * frases.length);
-  if (frases.length > 1) {
-    while (i === lastIndex) i = Math.floor(Math.random() * frases.length);
-  }
-  lastIndex = i;
-  return frases[i];
-}
-
-btn.addEventListener("click", () => {
-  if (animando) return;
-
-  animando = true;
-  btn.disabled = true;
-
-  // salida
-  btn.classList.remove("in");
-  btn.classList.add("out");
-
-  // entrada
-  setTimeout(() => {
-    mainText.textContent = nextPhrase();
-
-    btn.classList.remove("out");
-    btn.classList.add("in");
-
-    setTimeout(() => {
-      animando = false;
-      btn.disabled = false;
-    }, 380);
-
-  }, 180);
-});
-</script>
-
+  <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
