--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <canvas id="heartsBg"></canvas>
 
   <div class="container">
-    <h1>💘 Feliz San Valentín, Pepito Suarez 💘</h1>
+    <h1>💘 Feliz San Valentín 💘</h1>
 
     <div class="row">
       <img class="photo" src="image/pareja.jpg" alt="Foto">
@@ -36,6 +36,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
